Updated personal info

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Evagoras Makridis"
   avatar           : "evagoras.jpg"
   bio              : "M.Sc. Autonomous Systems"
-  location         : "Stockholm, Sweden"
+  location         : "Limassol, Cyprus"
   employer         :
   googlescholar    : "https://scholar.google.gr/citations?user=qNcszUUAAAAJ&hl=en&oi=ao"
   email            :
