--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   googlescholar    : "https://scholar.google.gr/citations?user=qNcszUUAAAAJ&hl=en&oi=ao"
   email            : "makridis.evagoras@ucy.ac.cy"
-  researchgate     : "https://www.researchgate.net/profile/Evagoras_Makridis"
+  researchgate     : #"https://www.researchgate.net/profile/Evagoras_Makridis"
   uri              :
   bitbucket        :
   codepen          :
